--- a/static/index.html
+++ b/static/index.html
@@ -15,7 +15,7 @@
       button {width: 100%; background-color: #eee; padding: 10px;}
     </style>
     <script src="/socket.io/socket.io.js"></script>
-    <script src="https://code.jquery.com/jquery-1.11.1.js"></script>
+    <script src="./jquery.js"></script>
     <script>
       $(function () {
         var socket = io();
